[package]
name = "AdventOfCode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.12.0"
matches = { version = "0.1.10", features = [] }

## 2023 ##
[[bin]]
name = "2023-day1"
path = "src/2023/day1/main.rs"

[[bin]]
name = "2023-day2"
path = "src/2023/day2/main.rs"

[[bin]]
name = "2023-day3"
path = "src/2023/day3/main.rs"
